--- a/style/Hero-Section.css
+++ b/style/Hero-Section.css
@@ -1,11 +1,12 @@
 .hero-section {
     background: url('../assets/hero-bg.png');
-    background-size: cover;
-    background-position: center;
     display: flex;
+    background-size: cover;
+    background-position: center; 
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 102px;
 }
 
 
@@ -32,8 +33,7 @@
     font-weight: 600;
     padding: 0.5rem 1rem;
     border-radius: 12px;
-    border: none;
-    box-shadow: #00000033 0px 4px 6px -1px, #0000001a 0px 2px 4px -1px;
+
 }
 
 .hero-content {
@@ -45,7 +45,9 @@
 .hero-content h2 {
     font-size: 4rem;
     font-weight: 800;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
+    margin-top:120px;
+
 }
 
 .hero-content p {
@@ -65,6 +67,9 @@
     font-weight: 600;
     padding: 0.5rem 1.5rem;
     background: #1A0B2E;
+    &&:hover{
+        background-color: rgb(55, 59, 56);
+    }
 }
 
 .spotify {
