--- a/style/media-quary.css
+++ b/style/media-quary.css
@@ -1,4 +1,3 @@
-
 @media (max-width: 576px) {
     .menu {
         display: none;
@@ -29,6 +28,8 @@
         padding: 1rem 1rem;
         min-height: 15rem;
         height: auto;
+        margin-top: 2px;
+        
     }
 
     .mic-section .circle {
@@ -59,6 +60,7 @@
 
     .hero-content p {
         margin-bottom: 0.5rem;
+        margin-bottom: 1.8rem;
 
     }
 
@@ -74,7 +76,7 @@
 
     .btn-container {
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
         margin: 1rem auto;
     }
 
@@ -94,19 +96,22 @@
     }
 
     .new {
-        right: 3.5rem;
-        top: 1rem;
+        right: 30%;
     }
 
     .about-title {
         font-size: 2rem;
         font-weight: 700;
+        margin-bottom: 1rem;
+
 
     }
 
     .about-section p {
         text-align: center;
         margin-bottom: 1rem;
+        padding: 0rem 2rem;
+        margin-left: 1rem;
     }
 
     .tech-container {
